tests/fixtures/invalid/len_no_args.py
# len() requires at least 1 argument
x = len()
